--- a/static/css/code.css
+++ b/static/css/code.css
@@ -16,7 +16,6 @@ html, body {
   width: 550px;
   margin: 0 0 0 auto;
   padding: 0;
-  background: url(/static/img/JavaScript-logo-64x64.png) no-repeat 1.2em bottom;
 }
 #content_container.collapsed {
   display: none;
@@ -244,6 +243,14 @@ ul.more li.highlight {
   border-radius: 5px;
   white-space: nowrap;
   padding: 0 .3em;
+}
+#about {
+  position: absolute;
+  display: block;
+  left: 0;
+  bottom: 15px;
+  text-align: left;
+  padding: .1em .5em;
 }
 #tutorial_nav {
   position: absolute;
