--- a/static/css/code.css
+++ b/static/css/code.css
@@ -370,3 +370,23 @@ ul.more li.disabled {
     margin-left: 100%;
   }
 }
+#diff {
+  height: 100%;
+}
+#diffview .CodeMirror {
+  font-size: 0.8em;
+  line-height: 1.3em;
+  height: 100%;
+}
+#diff #diffview {
+  height: 100%;
+}
+#diff .CodeMirror-merge {
+  height: 100%;
+}
+#diff .CodeMirror-merge-pane {
+  height: 100%;
+}
+div.hidden {
+  display: none;
+}
